k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-sandbox
spec:
  selector:
    app.kubernetes.io/name: cloud-sandbox
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
